# gitlense

./: .example.env  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  evaluation_results.json  golden_dataset.jsonl  main.py  nixpacks.toml  pyproject.toml  railway.toml
model/: repo.py  user.py
routers/: auth.py  chat.py  repos.py
scripts/: evaluate.py  generate_golden_dataset.py
services/: auth.py  database.py  embedder.py  github.py  parser.py  qdrant.py  rag.py  rerank.py
worker/: celery_app.py  tasks.py
